fix theme build and alignment of credit text

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,8 @@
 ---
 ---
 
-@import "{{ site-theme }}";
+@import 'jekyll-theme-leap-day';
+
 a {
 	&.anchor {
 		display: inline-block;
@@ -28,3 +29,19 @@ nav {
   background-image: linear-gradient(120deg, #5073B8, #A067AB);
 }
 
+#maintainer {
+	position: fixed;
+    left: 50%;
+    margin-left: -203px;
+    padding: 10px 12px;
+    margin-top: 6px;
+    line-height: 14px;
+
+	@media print, screen and (max-width: 720px) {
+		float: left;
+	    display: inline-block;
+	    margin-left: 0px;
+	    position: fixed;
+	    left: 150px;
+	}
+}
